@startuml

title __MODEL's Class Diagram__\n

  namespace com.game {
    namespace model {
      class com.game.model.Armored {
          - armor : int
          {static} - random : Random
          + Armored()
          + getArmor()
          + setArmor()
          + toCure()
          + toHit()
          + toString()
      }
    }
  }
  

  namespace com.game {
    namespace model {
      class com.game.model.Doctor {
          - healthKits : int
          {static} - random : Random
          + Doctor()
          + getHealthKits()
          + setHealthKits()
          + toCure()
          + toString()
      }
    }
  }
  

  namespace com.game {
    namespace model {
      class com.game.model.Droid {
          - damage : int
          - health : int
          - maxHealth : int
          - name : String
          {static} - random : Random
          + getDamage()
          + getHealth()
          + getMaxHealth()
          + getName()
          + setDamage()
          + setHealth()
          + setMaxHealth()
          + setName()
          + toCure()
          + toHit()
          ~ Droid()
      }
    }
  }
  

  namespace com.game {
    namespace model {
      class com.game.model.Wild {
          {static} - random : Random
          - wildness : float
          + Wild()
          + getWildness()
          + setWildness()
          + toHit()
          + toString()
      }
    }
  }
  

  com.game.model.Armored -up-|> com.game.model.Droid
  com.game.model.Doctor -up-|> com.game.model.Droid
  com.game.model.Wild -up-|> com.game.model.Droid


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
